fix(_mixins): import variables

--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -2,6 +2,9 @@
 //   MIXINS
 // =================================
 
+// Imports
+@use 'variables' as *;
+
 // =================================
 //   TYPOGRAPHY
 // =================================
