--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -9,22 +9,22 @@
 
 // Primary button
 .btn-primary {
-  @include components.button-base($background-accent, $text-light);
-  box-shadow: 0 2px 6px rgba($color: $background-accent, $alpha: 0.2);
+  @include components.button-base($bg-brand, $text-inverse);
+  box-shadow: 0 2px 6px rgba($color: $bg-brand, $alpha: 0.2);
 
   &:hover,
   &:active {
-    box-shadow: 0 4px 12px rgba($color: $background-accent, $alpha: 0.25);
+    box-shadow: 0 4px 12px rgba($color: $bg-brand, $alpha: 0.25);
   }
 }
 
 // Secondary button
 .btn-secondary {
   @include components.button-base(
-    $background-accent-light,
+    $bg-accent,
     $text-accent,
-    color.scale($background-accent-light, $lightness: -10%),
-    $text-main
+    color.scale($bg-accent, $lightness: -10%),
+    $text-primary
   );
 }
 
@@ -37,10 +37,10 @@
 .btn-primary-outline {
   @include components.button-base(
     transparent,
-    $background-accent,
-    color.scale($background-accent, $lightness: 90%)
+    $bg-brand,
+    color.scale($bg-brand, $lightness: 90%)
   );
-  border: 2px solid $background-accent;
+  border: 2px solid $bg-brand;
 }
 
 // Large button
