style(_utilities): clear and update text and colors

--- a/src/scss/utilities/_utilities.scss
+++ b/src/scss/utilities/_utilities.scss
@@ -4,120 +4,39 @@
 
 // Imports
 @use '../base/variables' as *;
-
-// =================================
-//   SPACING
-// =================================
-
-// Margins
-.m-0 { margin: 0; }
-.m-1 { margin: $spacing-xs; }
-.m-2 { margin: $spacing-sm; }
-.m-3 { margin: $spacing-md; }
-.m-4 { margin: $spacing-lg; }
-.m-lg2 { margin: $spacing-lg2; }
-.m-5 { margin: $spacing-xl; }
-
-.m-auto { margin: auto; }
-.mx-auto { margin: 0 auto; }
-.my-auto { margin: auto 0; }
-
-.mb-0 { margin-bottom: 0; }
-.mb-1 { margin-bottom: $spacing-xs; }
-.mb-2 { margin-bottom: $spacing-sm; }
-.mb-3 { margin-bottom: $spacing-md; }
-.mb-4 { margin-bottom: $spacing-lg; }
-.mb-lg2 { margin: $spacing-lg2; }
-.mb-5 { margin-bottom: $spacing-xl; }
-.mb-6 { margin-bottom: 3.5rem; }
-.mb-7 { margin-bottom: 4rem; }
-.mb-8 { margin-bottom: 5rem; }
-.mb-9 { margin-bottom: 6rem; }
-.mb-10 { margin-bottom: 8rem; }
-
-.me-0 { margin-right: 0; }
-.me-1 { margin-right: $spacing-xs; }
-.me-2 { margin-right: $spacing-sm; }
-.me-3 { margin-right: $spacing-md; }
-.me-4 { margin-right: $spacing-lg; }
-.me-lg2 { margin: $spacing-lg2; }
-.me-5 { margin-right: $spacing-xl; }
-
-// Paddings
-.p-0 { padding: 0; }
-.p-1 { padding: $spacing-xs; }
-.p-2 { padding: $spacing-sm; }
-.p-3 { padding: $spacing-md; }
-.p-4 { padding: $spacing-lg; }
-.p-lg2 { margin: $spacing-lg2; }
-.p-5 { padding: $spacing-xl; }
-
-.px-0 { padding-inline: 0; }
-.px-1 { padding-inline: $spacing-xs; }
-.px-2 { padding-inline: $spacing-sm; }
-.px-3 { padding-inline: $spacing-md; }
-.px-4 { padding-inline: $spacing-lg; }
-.px-lg2 { margin: $spacing-lg2; }
-.px-5 { padding-inline: $spacing-xl; }
-
-.py-0 { padding-block: 0; }
-.py-1 { padding-block: $spacing-xs; }
-.py-2 { padding-block: $spacing-sm; }
-.py-3 { padding-block: $spacing-md; }
-.py-4 { padding-block: $spacing-lg; }
-.py-lg2 { margin: $spacing-lg2; }
-.py-5 { padding-block: $spacing-xl; }
-.py-6 { padding-block: 3.5rem; }
-.py-7 { padding-block: 4rem; }
-.py-8 { padding-block: 5rem; }
+@use '../base/mixins' as *;
 
 // =================================
 //   TEXT
 // =================================
 
-// Text alignments
-.text-start {
-  text-align: left;
-}
+// Alignments
+.text-start   { text-align: left; }
+.text-center  { text-align: center; }
+.text-end     { text-align: right; }
 
-.text-center {
-  text-align: center;
-}
+// Transforms
+.text-uppercase   { text-transform: uppercase; }
+.text-capitalize  { text-transform: capitalize; }
 
-.text-end {
-  text-align: right;
-}
+// Weights
+.fw-bolder  { font-weight: 700; }
+.fw-bold    { font-weight: 600; }
+.fw-medium  { font-weight: 500; }
+.fw-normal  { font-weight: 400; }
 
-// Fonts
-.font-title { font-family: $font-title; }
-.font-text { font-family: $font-text; }
+// Sizes
+.fs-sm  { font-size: $fs-sm; line-height: 1.5; }
+.fs-md  { font-size: $fs-md; line-height: 1.6; }
+.fs-lg  { font-size: $fs-lg; line-height: 1.5; }
 
-.fw-bolder { font-weight: 700; }
-.fw-bold { font-weight: 600; }
-.fw-normal { font-weight: 400; }
-
-// Text transforms
-.text-uppercase { text-transform: uppercase; }
-.text-capitalize { text-transform: capitalize; }
-
-// =================================
-//   COLORS
-// =================================
-
-// Background utilities
-.bg-brand   { background-color: $bg-brand; }
-.bg-accent  { background-color: $bg-accent; }
-.bg-surface { background-color: $bg-surface; }
-.bg-page    { background-color: $bg-page; }
-
-// Text utilities
-.text-primary { color: $text-primary; }
+// Colors
+.text-primary   { color: $text-primary; }
 .text-secondary { color: $text-secondary; }
-.text-accent { color: $text-accent; }
-.text-light, .text-inverse {
-  color: $text-inverse;
-}
-.text-muted { color: $text-muted; }
+.text-accent    { color: $text-accent; }
+.text-muted     { color: $text-muted; }
+.text-inverse,
+.text-light     { color: $text-inverse; }
 
 // =================================
 //   VISIBILITY
@@ -138,10 +57,10 @@
 //   SIZING
 // =================================
 
-.w-50 { width: 50%; }
-.w-100 { width: 100%; }
+.w-50   { width: 50%; }
+.w-100  { width: 100%; }
 
-.h-100 { height: 100%; }
+.h-100  { height: 100%; }
 
 // =================================
 //   BORDERS
@@ -151,10 +70,18 @@
 .border-0 { border: none; }
 
 // Border radius
-.rounded-0 { border-radius: 0; }
-.rounded-xs { border-radius: $rounded-xs; }
-.rounded-sm { border-radius: $rounded-sm; }
-.rounded-md { border-radius: $rounded-md; }
-.rounded-lg { border-radius: $rounded-lg; }
-.rounded-xl { border-radius: $rounded-xl; }
-.rounded-xxl { border-radius: $rounded-xxl; }
+.rounded-0    { border-radius: 0; }
+.rounded-xs   { border-radius: $rounded-xs; }
+.rounded-sm   { border-radius: $rounded-sm; }
+.rounded-md   { border-radius: $rounded-md; }
+.rounded-lg   { border-radius: $rounded-lg; }
+.rounded-xl   { border-radius: $rounded-xl; }
+.rounded-xxl  { border-radius: $rounded-xxl; }
+
+// =================================
+//   BACKGROUNDS
+// =================================
+.bg-brand   { background-color: $bg-brand; }
+.bg-accent  { background-color: $bg-accent; }
+.bg-surface { background-color: $bg-surface; }
+.bg-page    { background-color: $bg-page; }
