style(Footer): update style
- Include typography, background, and spacing

--- a/src/scss/utilities/_utilities.scss
+++ b/src/scss/utilities/_utilities.scss
@@ -69,3 +69,4 @@
 .bg-accent  { background-color: $bg-accent; }
 .bg-surface { background-color: $bg-surface; }
 .bg-page    { background-color: $bg-page; }
+.bg-section { background-color: $bg-section; }
