--- a/src/scss/layout/_page-layouts.scss
+++ b/src/scss/layout/_page-layouts.scss
@@ -10,24 +10,59 @@
   min-height: 100vh;
   display: grid;
   grid-template-rows: auto 1fr auto;
+  row-gap: 5rem;
+
+  @include media-breakpoint-down($bp-xxl) {
+    row-gap: 4rem;
+  }
+
+  @include media-breakpoint-down($bp-xl) {
+    row-gap: 3.5rem;
+  }
+
+  @include media-breakpoint-down($bp-md) {
+    row-gap: 3rem;
+  }
+
+  @include media-breakpoint-down($bp-sm) {
+    row-gap: $spacing-lg2;
+  }
 }
 
 .main-content {
   display: grid;
   grid-template-columns: 250px 1fr;
-  gap: $spacing-lg2;
+  gap: $spacing-xl;
 
   @include media-breakpoint-down($bp-xl) {
     grid-template-columns: 200px 1fr;
-    gap: $spacing-lg;
+    gap: $spacing-lg2;
   }
 
-  @include media-breakpoint-down($bp-md) {
+  @include media-breakpoint-down($bp-lg) {
     grid-template-columns: 1fr;
+  }
+
+   @include media-breakpoint-down($bp-sm) {
+    row-gap: $spacing-lg;
   }
 }
 
 .player-list {
   @include grid-fill(300px);
-  gap: $spacing-lg;
+  gap: $spacing-xl;
+
+  @include media-breakpoint-down($bp-xxl) {
+    @include grid-fill(250px);
+    gap: $spacing-lg2;
+  }
+
+  @include media-breakpoint-down($bp-md) {
+    @include grid-fill(200px);
+    gap: $spacing-lg;
+  }
+
+  @include media-breakpoint-down($bp-sm) {
+    row-gap: $spacing-md;
+  }
 }
