--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -42,6 +42,21 @@
 // =================================
 
 .card-player {
+  flex: 1 1 300px;
+  max-width: 100%;
+  
+  @include media-breakpoint-down($bp-xxl) {
+    flex: 1 1 250px;
+  }
+
+  @include media-breakpoint-down($bp-md) {
+    flex: 1 1 200px;
+  }
+
+  @include media-breakpoint-down($bp-sm) {
+    flex: 1 1 100%;
+  }
+
   .card-header {
     text-align: center;
     background-color: $bg-page;
