style(_forms-mixins): add base select style

--- a/src/scss/forms/_forms.scss
+++ b/src/scss/forms/_forms.scss
@@ -72,3 +72,11 @@
 .checkbox-label {
   @include forms.checkbox-label();
 }
+
+// =================================
+//   CHECKBOX
+// =================================
+
+.form-select {
+  @include forms.form-select();
+}
