--- a/src/scss/forms/_forms-mixins.scss
+++ b/src/scss/forms/_forms-mixins.scss
@@ -5,6 +5,7 @@
 // Imports
 @use 'sass:color';
 @use '../base/variables' as *;
+@use '../base/mixins' as *;
 
 // =================================
 //   INPUT FIELDS
@@ -167,4 +168,50 @@
   color: $color;
   font-weight: 500;
   font-family: $font-family;
+}
+
+// =================================
+//   SELECT
+// =================================
+
+@mixin form-select(
+  $bg: $bg-page,
+  $color: $text-primary,
+  $border: 1px solid $form-border,
+  $border-focus: $form-border-focus,
+  $padding: 0.5rem 1rem,
+  $rounded: $rounded-sm,
+  $font-size: $fs-base,
+  $font-family: $font-form,
+) {
+  appearance: none;
+  outline: none;
+  cursor: pointer;
+  font-family: $font-family;
+  font-size: $font-size;
+  color: $color;
+  background-color: $bg;
+  border: $border;
+  border-radius: $rounded;
+  padding: $padding;
+  max-width: 100%;
+  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+
+  &:hover {
+    border-color: color.scale($form-border, $lightness: -10%);
+  }
+
+  &:focus {
+    border-color: $border-focus;
+    box-shadow: 0 0 0 0.2rem rgba($border-focus, 0.25);
+  }
+
+  &:disabled {
+    @include form-disabled;
+  }
+
+  // Responsive font-size
+  @include media-breakpoint-down($bp-md) {
+    font-size: calc(#{$font-size} * 0.9);
+  }
 }
