--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -12,7 +12,7 @@
 // =================================
 
 .container {
-  max-width: 100%;
+  width: 100%;
   margin: 0 auto;
   padding-inline: $spacing-md;
 
