--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -50,7 +50,12 @@ $checkbox-label: $form-border-focus;
 $success: #2e7d32;
 $warning: #f9a825;
 $danger: #d32f2f;
+
+// Info
 $info: #0288d1;
+$info-bg: #e1f5fe;
+$info-text: #01579b;
+$info-border: #0288d1;
 
 // =================================
 //   TYPOGRAPHY
