--- a/src/scss/components/_toolbar.scss
+++ b/src/scss/components/_toolbar.scss
@@ -1,11 +1,28 @@
 // =================================
-//   Toolbar
+//   TOOLBAR
 // =================================
 
 // Imports
 @use '../base/variables' as *;
 @use '../base/mixins' as *;
 
+// Container
+.toolbar {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  align-items: center;
+  gap: $spacing-lg2;
+
+  @include media-breakpoint-down($bp-xl) {
+    gap: $spacing-lg;
+  }
+
+  @include media-breakpoint-down($bp-md) {
+    gap: $spacing-md;
+  }
+}
+
+// Select
 .sortPlayer {
   display: flex;
   align-items: center;
