--- a/src/scss/components/_toolbar.scss
+++ b/src/scss/components/_toolbar.scss
@@ -18,6 +18,7 @@
   }
 
   @include media-breakpoint-down($bp-md) {
+    grid-template-columns: 1fr;
     gap: $spacing-md;
   }
 }
@@ -27,6 +28,7 @@
   display: flex;
   align-items: center;
   width: 300px;
+  max-width: 100%;
   gap: $spacing-md;
 
   &__select {
@@ -41,7 +43,7 @@
     width: 200px;
   }
 
-  @include media-breakpoint-down($bp-sm) {
-    width: 100%;
+  @include media-breakpoint-down($bp-md) {
+    width: 250px;
   }
 }
