--- a/src/scss/components/_toolbar.scss
+++ b/src/scss/components/_toolbar.scss
@@ -19,6 +19,7 @@
 
   @include media-breakpoint-down($bp-md) {
     grid-template-columns: 1fr;
+    padding-inline: $spacing-md;
     gap: $spacing-md;
   }
 }
@@ -33,17 +34,5 @@
 
   &__select {
     flex-grow: 1;
-  }
-
-  @include media-breakpoint-down($bp-xxl) {
-    width: 250px;
-  }
-
-  @include media-breakpoint-down($bp-lg) {
-    width: 200px;
-  }
-
-  @include media-breakpoint-down($bp-md) {
-    width: 250px;
   }
 }
