style(_forms): improve form layout

--- a/src/scss/forms/_forms.scss
+++ b/src/scss/forms/_forms.scss
@@ -13,13 +13,13 @@
 
 .form-container {
   display: flex;
-  flex-flow: column wrap;
+  flex-direction: column;
   gap: $spacing-lg;
 }
 
 .form-row {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
   gap: $spacing-md;
 
   @include media-breakpoint-down(sn) {
