style(base): add !important to spacing utilities

--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -75,11 +75,11 @@
   $value: map.get($map, $size);
 
   @if $breakpoint == null {
-    #{$property}: $value;
+    #{$property}: $value !important;
   } @else {
     $min-width: map.get($breakpoints, $breakpoint);
     @media (min-width: $min-width) {
-      #{$property}: $value;
+      #{$property}: $value !important;
     }
   }
 }
