style(_filter-form): update checkbox layout
- Display in row for medium devices
- Display in column for small devices

--- a/src/scss/forms/_filter-form.scss
+++ b/src/scss/forms/_filter-form.scss
@@ -21,4 +21,11 @@
       max-width: 300px;
     }
   }
+  
+  &__check-positions,
+  &__check-ageGroup {
+    @include media-breakpoint-between($bp-sm, $bp-lg) {
+      flex-flow: row wrap;
+    }
+  }
 }
