--- a/src/scss/layout/_page-layout.scss
+++ b/src/scss/layout/_page-layout.scss
@@ -31,12 +31,11 @@
 
 .main-layout {
   display: grid;
-  grid-template-columns: 250px 1fr;
+  grid-template-columns: auto 1fr;
   gap: $spacing-xl;
   align-items: start;
 
   @include media-breakpoint-down($bp-xl) {
-    grid-template-columns: 200px 1fr;
     gap: $spacing-lg2;
   }
 
