--- a/src/scss/forms/_filter-form.scss
+++ b/src/scss/forms/_filter-form.scss
@@ -32,4 +32,14 @@
   &__apply-ageRange {
     max-width: 300px;
   }
+
+  @include media-breakpoint-between($bp-lg, $bp-xl) {
+    &__input {
+      padding-inline: 0.5rem;
+    }
+
+    &__btn {
+      padding: 0.25rem 0.5rem;
+    }
+  }
 }
